Corrected feature, team section

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
     <!--header -->
-    <header class="header header--line">
+    <!-- <header class="header header--line">
       <div class="container">
         <nav class="navigation">
           <a class="link logo header--logo logo--part2" href="/" lang="en">
@@ -60,12 +60,12 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!-- main -->
     <main>
       <!--section hero-->
-      <section class="hero dark-bg">
+      <!-- <section class="hero dark-bg">
         <div class="container hero__content">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <div class="hero__button">
@@ -74,7 +74,7 @@
             </button>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- section feature -->
       <section class="section feature">
@@ -134,7 +134,7 @@
       </section>
 
       <!-- section gallery -->
-      <section class="section gallery">
+      <!-- <section class="section gallery">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="list grid gallery">
@@ -163,7 +163,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- section team -->
       <section class="section team--bg-color">
@@ -403,7 +403,7 @@
       </section>
 
       <!-- section clients -->
-      <section class="section">
+      <!-- <section class="section">
         <div class="container clients">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="list grid">
@@ -481,11 +481,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- footer-->
-    <footer class="dark-bg">
+    <!-- <footer class="dark-bg">
       <div class="container footer" id="contacts">
         <ul class="list grid footer-list">
           <li class="grid__item">
@@ -596,10 +596,10 @@
           </li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- modal window -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <label class="modal__close">
           <button class="close" data-modal-close></button>
@@ -688,7 +688,7 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
