Адаптовані розділи feature, team, clients

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <!--header -->
-    <!-- <header class="header header--line">
+    <header class="header header--line">
       <div class="container">
         <nav class="navigation">
           <a class="link logo header--logo logo--part2" href="/" lang="en">
@@ -60,7 +60,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
     <!-- main -->
     <main>
@@ -403,7 +403,7 @@
       </section>
 
       <!-- section clients -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container clients">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="list grid">
@@ -481,7 +481,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer-->
