--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--header -->
-    <header class="header header--line">
+    <!-- <header class="header header--line">
       <div class="container">
         <nav class="navigation">
           <a class="link logo header--logo logo--part2" href="/" lang="en">
@@ -61,8 +61,8 @@
           </li>
         </ul>
       </div>
-    </header>
-    <!--main-->
+    </header> -->
+    <!-- main -->
     <main>
       <!-- projects -->
       <section class="section">
@@ -101,6 +101,7 @@
               Маркетинг
             </button>
           </div>
+          <!-- projects -->
           <ul class="list grid projects">
             <li class="grid__item projects__bg">
               <div class="projects__thumb">
@@ -257,7 +258,7 @@
       </section>
     </main>
     <!-- footer-->
-    <footer class="dark-bg">
+    <!-- <footer class="dark-bg">
       <div class="container footer" id="contacts">
         <ul class="list grid footer-list">
           <li class="grid__item">
@@ -367,6 +368,6 @@
           </li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
