--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!--header -->
-    <!-- <header class="header header--line">
+    <header class="header header--line">
       <div class="container">
         <nav class="navigation">
           <a class="link logo header--logo logo--part2" href="/" lang="en">
@@ -61,7 +61,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <!-- main -->
     <main>
       <!-- projects -->
@@ -258,7 +258,7 @@
       </section>
     </main>
     <!-- footer-->
-    <!-- <footer class="dark-bg">
+    <footer class="dark-bg">
       <div class="container footer" id="contacts">
         <ul class="list grid footer-list">
           <li class="grid__item">
@@ -368,6 +368,6 @@
           </li>
         </ul>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
