--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <!--header -->
-    <!-- <header class="header header--line">
+    <header class="header header--line">
       <div class="container">
         <nav class="navigation">
           <a class="link logo header--logo logo--part2" href="/" lang="en">
@@ -67,10 +67,10 @@
           </svg>
         </button>
       </div>
-    </header> -->
+    </header>
 
-    <!-- <div class="mobile-overlay"> -->
-    <!-- <div class="mobile-menu" data-menu>
+    <!-- mobile menu -->
+    <div class="mobile-menu" data-menu>
       <ul class="list menu">
         <li class="menu__item">
           <a class="link menu__link current" href="./index.html">Студия</a>
@@ -132,8 +132,7 @@
           >
         </li>
       </ul>
-    </div> -->
-    <!-- </div> -->
+    </div>
 
     <!-- main -->
     <main>
@@ -150,7 +149,7 @@
       </section>
 
       <!-- section feature -->
-      <!-- <section class="section feature">
+      <section class="section feature">
         <div class="container feature__content">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="list grid">
@@ -204,47 +203,133 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- section gallery -->
-      <!-- <section class="section gallery">
+      <section class="section gallery">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="list grid gallery">
             <li class="grid__item gallery__item">
-              <img
-                src="./images/jobs/box_1.jpg"
-                alt="programer_working"
-                width="370"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/jobs/desktop/box_1-desktop.jpg    1x,
+                    ./images/jobs/desktop/box_1@2x-desktop.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/jobs/desktop/box_1-desktop.jpg"
+                  alt="programer_working"
+                  width="370"
+                />
+              </picture>
               <div class="gallery__thumb">
                 <h3 class="gallery__view">Десктопные приложения</h3>
               </div>
             </li>
 
             <li class="grid__item gallery__item">
-              <img src="./images/jobs/box_2.jpg" alt="developer" width="370" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/jobs/desktop/box_2-desktop.jpg    1x,
+                    ./images/jobs/desktop/box_2@2x-desktop.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/jobs/desktop/box_2-desktop.jpg"
+                  alt="developer"
+                  width="370"
+                />
+              </picture>
               <div class="gallery__thumb">
                 <h3 class="gallery__view">Мобильные приложения</h3>
               </div>
             </li>
             <li class="grid__item gallery__item">
-              <img src="./images/jobs/box_3.jpg" alt="web_design" width="370" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/jobs/desktop/box_3-desktop.jpg    1x,
+                    ./images/jobs/desktop/box_3@2x-desktop.jpg 2x
+                  "
+                />
+                <img
+                  src="./images/jobs/desktop/box_3-desktop.jpg"
+                  alt="web_design"
+                  width="370"
+                />
+              </picture>
               <div class="gallery__thumb">
                 <h3 class="gallery__view">Дизайнерские решения</h3>
               </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- section team -->
-      <!-- <section class="section team--bg-color">
+      <section class="section team--bg-color">
         <figure class="container">
           <figcaption><h2 class="section__title">Наша команда</h2></figcaption>
           <ul class="list grid">
             <li class="team grid__item">
-              <img src="./images/team/img_1.jpg" alt="photo1" width="270" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/desktop/img_1-desktop.webp    1x,
+                    ./images/team/desktop/img_1@2x-desktop.webp 2x
+                  "
+                  media="(min-width:1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_1-tablet.webp    1x,
+                    ./images/team/tablet/img_1@2x-tablet.webp 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_1-mobile.webp    1x,
+                    ./images/team/mobile/img_1@2x-mobile.webp 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/desktop/img_1-desktop.jpg    1x,
+                    ./images/team/desktop/img_1@2x-desktop.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_1-tablet.jpg    1x,
+                    ./images/team/tablet/img_1@2x-tablet.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_1-mobile.jpg    1x,
+                    ./images/team/mobile/img_1@2x-mobile.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/team/desktop/img_1-desktop.jpg"
+                  alt="photo1"
+                  width="450"
+                />
+              </picture>
+
               <div class="team__member">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p lang="en">Product Designer</p>
@@ -301,7 +386,60 @@
               </div>
             </li>
             <li class="team grid__item">
-              <img src="./images/team/img_2.jpg" alt="photo2" width="270" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/desktop/img_2-desktop.webp    1x,
+                    ./images/team/desktop/img_2@2x-desktop.webp 2x
+                  "
+                  media="(min-width:1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_2-tablet.webp    1x,
+                    ./images/team/tablet/img_2@2x-tablet.webp 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_2-mobile.webp    1x,
+                    ./images/team/mobile/img_2@2x-mobile.webp 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/desktop/img_2-desktop.jpg    1x,
+                    ./images/team/desktop/img_2@2x-desktop.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_2-tablet.jpg    1x,
+                    ./images/team/tablet/img_2@2x-tablet.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_2-mobile.jpg    1x,
+                    ./images/team/mobile/img_2@2x-mobile.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/team/desktop/img_2-desktop.jpg"
+                  alt="photo2"
+                  width="450"
+                />
+              </picture>
               <div class="team__member">
                 <h3 class="team__title">Ольга Репина</h3>
                 <p lang="en">Frontend Developer</p>
@@ -358,7 +496,60 @@
               </div>
             </li>
             <li class="team grid__item">
-              <img src="./images/team/img_3.jpg" alt="photo3" width="270" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/desktop/img_3-desktop.webp    1x,
+                    ./images/team/desktop/img_3@2x-desktop.webp 2x
+                  "
+                  media="(min-width:1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_3-tablet.webp    1x,
+                    ./images/team/tablet/img_3@2x-tablet.webp 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_3-mobile.webp    1x,
+                    ./images/team/mobile/img_3@2x-mobile.webp 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/desktop/img_3-desktop.jpg    1x,
+                    ./images/team/desktop/img_3@2x-desktop.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_3-tablet.jpg    1x,
+                    ./images/team/tablet/img_3@2x-tablet.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_3-mobile.jpg    1x,
+                    ./images/team/mobile/img_3@2x-mobile.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/team/desktop/img_3-desktop.jpg"
+                  alt="photo3"
+                  width="450"
+                />
+              </picture>
               <div class="team__member">
                 <h3 class="team__title">Николай Тарасов</h3>
                 <p lang="en">Marketing</p>
@@ -415,7 +606,60 @@
               </div>
             </li>
             <li class="team grid__item">
-              <img src="./images/team/img_4.jpg" alt="photo4" width="270" />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/desktop/img_4-desktop.webp    1x,
+                    ./images/team/desktop/img_4@2x-desktop.webp 2x
+                  "
+                  media="(min-width:1200px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_4-tablet.webp    1x,
+                    ./images/team/tablet/img_4@2x-tablet.webp 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_4-mobile.webp    1x,
+                    ./images/team/mobile/img_4@2x-mobile.webp 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="
+                    ./images/team/desktop/img_4-desktop.jpg    1x,
+                    ./images/team/desktop/img_4@2x-desktop.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/team/tablet/img_4-tablet.jpg    1x,
+                    ./images/team/tablet/img_4@2x-tablet.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
+                <source
+                  srcset="
+                    ./images/team/mobile/img_4-mobile.jpg    1x,
+                    ./images/team/mobile/img_1@2x-mobile.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                  type="image/jpg"
+                />
+                <img
+                  src="./images/team/desktop/img_4-desktop.jpg"
+                  alt="photo4"
+                  width="450"
+                />
+              </picture>
               <div class="team__member">
                 <h3 class="team__title">Михаил Ермаков</h3>
                 <p lang="en">UI Designer</p>
@@ -473,10 +717,10 @@
             </li>
           </ul>
         </figure>
-      </section> -->
+      </section>
 
       <!-- section clients -->
-      <!-- <section class="section">
+      <section class="section">
         <div class="container clients">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="list grid">
@@ -554,11 +798,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer-->
-    <!-- <footer class="dark-bg">
+    <footer class="dark-bg">
       <div class="container footer" id="contacts">
         <ul class="list grid footer-list">
           <li class="grid__item footer-list__item">
@@ -665,10 +909,10 @@
           </li>
         </ul>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- modal window -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <label class="modal__close">
           <button class="close" data-modal-close></button>
@@ -738,7 +982,7 @@
               >Комментарий</label
             >
           </div>
-          <div class="modal-check">
+          <div class="modal-form__field modal-check">
             <label for="user_agreement" class="modal-check__label">
               <input
                 class="modal-check__input"
@@ -757,7 +1001,7 @@
           </div>
         </form>
       </div>
-    </div> -->
+    </div>
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
